mobilerobotics_ws/log/build_2023-12-02_19-59-18/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 356
    else sign = 1
         ^
SyntaxError: invalid syntax

